feat: LastNormalStrikeScore 구현
전체적인 리팩토링 필요